[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://page/home/firstLaunch.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/icons/check.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/mascot.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.10529
margin_top = 1.05261
margin_right = 2.10522
margin_bottom = 1.05261
theme = ExtResource( 3 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.852796
anchor_top = 0.238772
anchor_right = 0.965101
anchor_bottom = 0.407105
theme = ExtResource( 4 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NameButton" type="TextureRect" parent="."]
anchor_left = 0.049342
anchor_top = 0.0947368
anchor_right = 0.456569
anchor_bottom = 0.861404
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NameLine" type="LineEdit" parent="."]
anchor_left = 0.538394
anchor_top = 0.277719
anchor_right = 0.813785
anchor_bottom = 0.374386
max_length = 30
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.484375
anchor_top = 0.581667
anchor_right = 0.921875
anchor_bottom = 0.891667
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text" type="RichTextLabel" parent="Panel"]
anchor_left = 0.0531014
anchor_top = 0.18223
anchor_right = 0.981673
anchor_bottom = 0.832767
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Salut, C'est quoi ton nom ?
Clique sur le rectangle orange et rentre ton nom"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="error" type="Label" parent="."]
visible = false
anchor_right = 0.553
anchor_bottom = 0.135
margin_left = 508.579
margin_top = 83.421
margin_right = 359.307
margin_bottom = 38.421
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Le token ne correspond pas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="LinkButton" parent="."]
visible = false
anchor_left = 0.525288
anchor_top = 0.0578947
anchor_right = 0.926655
anchor_bottom = 0.117895
text = "Vous n'avez pas de token ?"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Link" to="." method="_on_Link_pressed"]
